src/test/ui/parser/import-glob-rename.stderr
error: expected `;`, found keyword `as`
  --> $DIR/import-glob-rename.rs:15:12
   |
LL | use foo::* as baz;
   |            ^^ expected `;`

error: aborting due to previous error

